# lessrss

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  compose.override.yml  compose.yml  docker-compose.yml  entrypoint.sh  pyproject.toml
.githooks/: pre-commit
alembic/: env.py
alembic/versions/: a330e0948ae4_init.py
app/: Dockerfile  README.md  alembic.ini  entrypoint.sh  pyproject.toml
app/app/: entrypoint.py  models.py  routes.py  wsgi.py
app/app/alembic/: env.py
app/app/alembic/versions/: c98ca07965d2_init.py
app/app/jobs/: generate.py  tfidf.py
app/app/jobs/distilbert/: dataset.py  entrypoint.py  train.py
app/app/jobs/generate/: generate.py
app/app/lib/: classifier.py  constant.py  distilbert.py  tfidf.py  types.py  utils.py
app/app/tests/: test_lib.py
backend/: Dockerfile  app.py  entrypoint.sh  requirements.txt
config/: crontab  default-config.yml
config/examples/: config.yml  crontab
cron/: crontab
examples/: config.yml
experiments/: Dockerfile  crontab
experiments/workflows/: tfidf.py
lss/: __main__.py  crontab  database.py  entrypoint.sh  models.py  routes.py
lss/jobs/distilbert/: __main__.py
lss/jobs/generate/: __main__.py
lss/jobs/tfidf/: __main__.py
lss/lib/: distilbert.py  utils.py
notebooks/: DistilBERT.ipynb  TF-IDF_LogisticRegression.ipynb
service/: Dockerfile  crontab  entrypoint.sh  requirements.txt
service/app/: __init__.py  models.py
service/lib/: base.py  distilbert.py  gpt.py  tfidf.py
service/scripts/: generate.py
service/utils/: logging.py
src/: .dockerignore  Dockerfile  crontab  entrypoint.sh  loadenv.sh  requirements.txt
src/app/: __init__.py  __main__.py  models.py  routes.py
src/config/: settings.py
src/jobs/distilbert/: dataset.py
src/jobs/generate/: __main__.py
src/lib/: classifier.py  config.py  constant.py  distilbert.py  gpt.py  tfidf.py  utils.py
src/scripts/: generate.py
src/scripts/train/: tfidf.py
training/: TF-IDF.ipynb  TF-IDF_NaiveBayes.ipynb  custom_transformer.py
